# util-toggl-to-zoho

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
legacy/: README.md  toggl2zoho
src/toggl_to_zoho/: __init__.py  __main__.py  cli.py  converter.py
tests/: __init__.py  test-input-toggl.csv  test-output-zoho.csv  test_cli.py  test_converter.py  test_integration.py
