[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "toggl-to-zoho"
dynamic = ["version"]
description = "Convert Toggl time entries to Zoho-compatible CSV format"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Nate Costello", email = "natecostello@gmail.com"}
]
keywords = ["toggl", "zoho", "csv", "time-tracking", "conversion"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Utilities",
]

[project.scripts]
toggl-to-zoho = "toggl_to_zoho.cli:main"

[project.urls]
Homepage = "https://github.com/natecostello/util-toggl-to-zoho"
Repository = "https://github.com/natecostello/util-toggl-to-zoho"
Issues = "https://github.com/natecostello/util-toggl-to-zoho/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["src/toggl_to_zoho"]

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.ruff]
line-length = 100
target-version = "py38"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501", # line too long (handled by black)
]

[tool.hatchling.version]
path = "src/toggl_to_zoho/__init__.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
